--- a/static/Lover.css
+++ b/static/Lover.css
@@ -102,7 +102,7 @@ a:hover{
     color: rgb(11, 181, 204);
 }
 
-@media (max-width: 1200px) {
+@media (300px<width<900px) {
     a:hover{
         background-color: rgb(204, 11, 194);
         color: rgb(10, 83, 7);
