--- a/static/PaginaPrincipal.css
+++ b/static/PaginaPrincipal.css
@@ -1,92 +1,95 @@
-.principal{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-    ul{
-        list-style-type: none;
+@media (300px<width<900px){
+    .principal{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    
+        ul{
+            list-style-type: none;
+        }
+        h1{
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            color: rgb(150, 9, 131);
+    
+        
+        }
+        span{
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            color: rgb(150, 9, 131);
+            font-size: 20px;
+        
+        }
+        
+        
+    
     }
-    h1{
+    .titulo{
         display: flex;
         text-align: center;
         justify-content: center;
-        color: rgb(150, 9, 131);
-
+        background-color: rgb(233, 18, 186);
+        color: rgb(40, 219, 195);    
+        padding: 10px;
+        margin: 10px;
+        border-radius: 10px;
     
+        font-size: 30px;
+        
+        
     }
-    span{
+    
+    
+    .flex-row {
         display: flex;
-        text-align: center;
+        flex-direction: row;
         justify-content: center;
-        color: rgb(150, 9, 131);
-        font-size: 20px;
+        align-items: center; 
+        flex-wrap: wrap;
+        margin: 10px;
+    
+        img{
+            width: 600px;
+            height: 300px;
+            margin: 3px;
+            object-fit: contain;
+        }
     
     }
+    .flex-around {
+        justify-content: space-around;
+    }
     
-    
-
-}
-.titulo{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    background-color: rgb(233, 18, 186);
-    color: rgb(40, 219, 195);    
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-
-    font-size: 30px;
-    
-    
-}
-
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; 
-    flex-wrap: wrap;
-    margin: 10px;
-
-    img{
+    @media (max-width: 768px) {
+        .flex-row  {
+            width: 45%; 
+        }
+    }
+    .cuadro{
+        background-color: antiquewhite;
+        text-decoration: none;
+        border-radius: 40px;
+        padding: 10px;
+        margin: 10px;
         width: 600px;
-        height: 300px;
-        margin: 3px;
-        object-fit: contain;
+        align-items: center;
     }
-
-}
-.flex-around {
-    justify-content: space-around;
-}
-
-@media (max-width: 768px) {
-    .flex-row  {
-        width: 45%; 
-    }
-}
-.cuadro{
-    background-color: antiquewhite;
-    text-decoration: none;
-    border-radius: 40px;
-    padding: 10px;
-    margin: 10px;
-    width: 600px;
-    align-items: center;
-}
-
-.link{
-    text-decoration: none;
-
-}
     
-
-.cuadro:hover{
-    background-color: rgb(233, 18, 186);
+    .link{
+        text-decoration: none;
+    
+    }
+        
+    
+    .cuadro:hover{
+        background-color: rgb(233, 18, 186);
+    }
 }
 
+/*
 @media (300px<width<900px) {
     .principal  {
         background-color: rgb(40, 219, 195);
@@ -142,3 +145,4 @@
     }
 
 }
+*/
