--- a/static/PaginaPrincipal.css
+++ b/static/PaginaPrincipal.css
@@ -1,3 +1,90 @@
+.principal{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    ul{
+        list-style-type: none;
+    }
+    h1{
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        color: rgb(150, 9, 131);
+
+    
+    }
+    span{
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        color: rgb(150, 9, 131);
+        font-size: 20px;
+    
+    }
+    
+}
+.titulo{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    background-color: rgb(233, 18, 186);
+    color: rgb(40, 219, 195);    
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+
+    font-size: 30px;
+    
+    
+}
+
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; 
+    flex-wrap: wrap;
+    margin: 10px;
+
+    img{
+        width: 600px;
+        height: 300px;
+        margin: 3px;
+        object-fit: contain;
+    }
+
+}
+.flex-around {
+    justify-content: space-around;
+}
+
+@media (max-width: 768px) {
+    .flex-row  {
+        width: 45%; 
+    }
+}
+.cuadro{
+    background-color: antiquewhite;
+    text-decoration: none;
+    border-radius: 40px;
+    padding: 10px;
+    margin: 10px;
+    width: 600px;
+    align-items: center;
+}
+
+.link{
+    text-decoration: none;
+
+}
+    
+
+.cuadro:hover{
+    background-color: rgb(233, 18, 186);
+}
+
 @media (300px<width<900px){
     .principal{
         display: flex;
@@ -88,61 +175,3 @@
         background-color: rgb(233, 18, 186);
     }
 }
-
-/*
-@media (300px<width<900px) {
-    .principal  {
-        background-color: rgb(40, 219, 195);
-        flex-direction: column;
-
-        h1{
-            font-size: 70px;
-            color: white;
-        
-        }
-        ul{
-            list-style-type: none;
-            font-size: 30px;
-            color: white;
-        
-        }
-        span{
-            font-size: 30px;
-            color: greenyellow;
-            justify-content: flex-start;
-            align-items: flex-start;
-            flex-direction: column-reverse;
-        
-        }
-        img{
-            width: 300px;
-            height: 250px;
-            margin: 3px;
-        
-        }
-    }
-    .link{
-        text-decoration: yellow;
-    }
-    .cuadro{
-        background-color: rgb(233, 18, 186);
-        margin: 10px;
-        padding: 10px;
-        border-radius: 40px;
-        width: 600px;
-        align-items: center;
-    }
-    .flex-row{
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: flex-end;
-        align-items: flex-end;
-        flex-wrap: wrap;
-        margin: 50px;
-    }
-    .cuadro:hover{
-        background-color: antiquewhite;
-    }
-
-}
-*/
