--- a/static/layout.css
+++ b/static/layout.css
@@ -4,5 +4,15 @@
     background-repeat: no-repeat;
     background-position: center;
     max-width: 100%;
-    height: 700vh;
+    height: 100%;
+}
+@media (300px<width<900px){
+    .layout{
+        background-image: url('https://i.pinimg.com/564x/48/d5/c1/48d5c1d556cc0c64a38012b402cd6733.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 100%;
+        height: 100%;
+    }
 }
