--- a/static/Login.css
+++ b/static/Login.css
@@ -48,7 +48,7 @@
 }
 
 
-@media (300px<width<900px){
+@media only screen and (max-width: 600px){
     .login{
         display: flex;
         justify-content: center;
@@ -60,8 +60,9 @@
         padding: 175px;
         margin: 10px;
         border-radius: 100px;
+    }
 
-    h1{
+    .login h1{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -72,7 +73,7 @@
         border-radius: 50px;
         font-size: 100px;
     }
-    input{
+    .login input{
         margin: 7px;
         padding: 10px;
         border-radius: 8px;
@@ -82,7 +83,7 @@
         background-color: rgb(18, 233, 36);
         color: rgb(213, 40, 219);
     }
-    button{
+    .login button{
         margin: 7px;
         padding: 10px;
         border-radius: 8px;
@@ -92,15 +93,15 @@
         background-color: rgb(18, 233, 36);
         color: rgb(213, 40, 219);
     }
-    button:hover{
+    .login button:hover{
         background-color: rgb(233, 18, 36);
         color: rgb(40, 213, 219);
     }
-    button:hover{
+    .login button:hover{
         background-color: rgb(233, 18, 36);
         color: rgb(40, 213, 219);
     }
 }
-}
+
  
 
