--- a/static/deleteComments.css
+++ b/static/deleteComments.css
@@ -39,7 +39,7 @@
     75%  {color: green;}
     100% {color: red;}
 }
-@media (300px<width<900px){
+@media only screen and (max-width: 600px){
     .deletecomments{
         display: flex;
         justify-content: center;
@@ -49,30 +49,30 @@
         padding: 70px;
         background-color: #c3eb14;
         border: 7px solid #0d57ec;
-    
-        h1{
-            font-size: 40px;
-            animation-name: v;
-            animation-duration: 4s;
-            animation-iteration-count: infinite;
+    }
+    .deletecomments h1{
+        font-size: 40px;
+        animation-name: v;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+    }
+    .deletecomments input{
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #5c0457;
+        background-color: rgb(142, 255, 127);
+        border-radius: 70px;
+
         }
-        input{
-            padding: 10px;
-            margin: 10px;
-            border: 2px solid #5c0457;
-            background-color: rgb(142, 255, 127);
-            border-radius: 70px;
-    
-        }
-        button{
-            padding: 10px;
-            margin: 10px;
-            border: 2px solid #6b7280;
-            background-color: rgb(255, 236, 127);
-            border-radius: 70px;
-            color: rgb(255, 47, 47);
-            font-size: 40px;
-        }
+    .deletecomments button{
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #6b7280;
+        background-color: rgb(255, 236, 127);
+        border-radius: 70px;
+        color: rgb(255, 47, 47);
+        font-size: 40px;
+    }
     }
     @keyframes v {
         0%   {color: red;}
@@ -81,4 +81,3 @@
         75%  {color: green;}
         100% {color: red;}
     }
-}
