--- a/static/formulario.css
+++ b/static/formulario.css
@@ -56,7 +56,7 @@
         color: purple;
     }
 }
-@media (300px<width<900px){
+@media only screen and (max-width: 600px){
     .formulario{
         display: flex;
         flex-direction: column;
@@ -67,7 +67,8 @@
         margin: 10px;
         border-radius: 50px;
         width: 99%;
-        input{
+    }
+        .formulario input{
             margin: 5px;
             padding: 5px;
             border-radius: 5px;
@@ -77,12 +78,12 @@
             background-color: rgb(18, 190, 233);
             color:blueviolet;
         }
-        h1{
+        .formulario h1{
             animation-name: titulo;
             animation-duration: 2s;
             animation-iteration-count: infinite;
         }
-        button{
+        .formulario button{
             margin: 5px;
             padding: 5px;
             border-radius: 5px;
@@ -114,4 +115,3 @@
             color: purple;
         }
     }
-}
