--- a/static/menu.css
+++ b/static/menu.css
@@ -26,7 +26,7 @@
     }
 
 }
-@media (300px<width<900px){
+@media only screen and (max-width: 600px){
     .menu{
         display: flex;
         justify-content: center;
@@ -37,7 +37,8 @@
         box-shadow:-5px 3 4px 0 rgba(0, 0, 0, 0.1);
         height: 70px;
         border-radius: 50px;
-        a{
+    }
+        .menu a{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -49,42 +50,11 @@
             width: 180px;
             margin: 0 10px;
         }
-        a:hover{
+        .menu a:hover{
             background-color: rgb(189, 221, 5);
             color: black;
         }
     
     }
-}
 
-/*
-@media (300px<width<1500px) {
-    .menu{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding: 10px 15px;
-        background-color: #ad0296;
-        color: rgb(157, 187, 25);
-        box-shadow:-5px 3 4px 0 rgba(0, 0, 0, 0.1);
-        height: 40px;
-        border-radius: 50px;
-        a{
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-start;
-            color: white;
-            text-decoration: none;
-            background-color: rgb(7, 89, 114);
-            padding: 20px 20px;
-            border-radius: 70px;
-            width: 80px;
-            margin: 10px 10px;
-        }
-        a:hover{
-            background-color: rgb(49, 6, 42);
-            color: rgb(228, 159, 10);
-        }
-    }
-}
-*/
+
