--- a/static/Search.css
+++ b/static/Search.css
@@ -53,7 +53,7 @@
         color: rgb(119, 128, 0);
     }
 }
-@media (300px<width<900px){
+@media only screen and (max-width: 600px){
     .searchName{
         display: flex;
         justify-content: center;
